@@ -1,0 +1,4 @@
+kernel/*		usr/src/modules/#NVIDIA#-kernel/
+debian/module/debian/*	usr/src/modules/#NVIDIA#-kernel/debian/
+debian/copyright	usr/src/modules/#NVIDIA#-kernel/debian/
+debian/bug-script	usr/src/modules/#NVIDIA#-kernel/debian/
