@@ -71,6 +71,7 @@ nvidia-graphics-drivers (340.108-1~git4deb9stretch) UNRELEASED; urgency=medium
   * Test that the patches can be applied to the module source (450.66-1).
   * nvidia-kernel-dkms: Ship with unapplied patches and apply the patches
     while building kernel modules (450.66-1).
+  * Simplify generating the -source and -dkms packages (450.66-1).
   * Bump Standards-Version to 4.5.0. No changes needed.
 
   [ Vincent Cheng ]
